# robosoccer_firmware

./: README.md
firmware/: CMakeLists.txt  package.xml
firmware/include/: firmware_bridge_utils.hpp
firmware/src/: firmware_bridge_node.cpp  firmware_bridge_utils.cpp
